# cogere

./: .env  .gitignore  Cargo.toml  Containerfile  README.md  bacon.toml  build.rs
.sqlx/: query-024a1a1b7499ecc76601ec1c8bb3ff7145289d0ca132ad9c079e8e2e603f849b.json  query-08a6ff8c674b8c824efd4e363baeec6e2070a387f06b117bb763d1f87111c918.json  query-090cf59adc3b39e0bfba52f6f15037ce544030ef7e8712e89b8af3d2a6670298.json  query-233ef71d01b46277cda0f040c0b94013918e6a7c7bf7815f6981ba04fe2839b3.json  query-25992254956582241270ac79f694aeb8635ab43bfce5f1f4a83b064f7cbf9a0e.json  query-3036a783d3088395e05234b1da1635a06fe50065d3bf8fc54fae50399eb22341.json  query-3094ddf56a814ae1ccc2b4cc504a03c2ddfa138f9f94f65ee5cd0d16358ff1b9.json  query-30f7409c9b8d7cf9d3ee81d36fd2f8839ec572e6898eb4c8ee357d2da47335d0.json  query-494122f0da9a30b96df48d8e95e44c51fb9f1881751ad08d39f864612f19cba2.json  query-4e4fd8d65c2c8c62890228de99be3e94068284a02d6ea2bfb56768e93967e963.json  query-5676067f3104cdddccb47505817558c9e1a8421c7759dab2a333752d6bd64fb2.json  query-5cf269de0a2a81c040370ca6082cc01cd64d5f5b25071e4eadaf88c7d13e6a3d.json  query-6612c0f30b1836fa126894d281501eb822e789305d2fbd6295f665953be4de8e.json  query-667d6d1fa6b28eab846598c9e1c39553e65a662442bc869c4698e23953d3a254.json  query-6976ea66b3b6b0f3d7090a3879adee1e2281fa2df4a6d161b194182e9498c725.json  query-6ab73ac851f0ca4aa4c6261644e8c0270d6e69f5feee4479ee8f048c3a0ce4ae.json  query-700417cfb677bd398621f26ac9e4bcdba02ecda572e76e601770b1ea0e7a5620.json  query-7b391ffd9ebf9466a767b50e35a960c0679e91e8ffa87c3255c15be5db24d593.json  query-7e8125aaabdad41b5d1700ed38925260b9434668078d0b526a93a07408fd22e9.json  query-931b5b85afe55a6c995bb581513da7251661596065482714820f150e4bfdc9d4.json  query-9d39b03add56d3c5caa1c572674b1b5879a87a31da38654d346519e090076331.json  query-aad363ff832a5801e1bc0d7142421560b4c7b1396dd4001f455696d2240722ab.json  query-b093dd82606df48dd9190be47f1b7df927e5765b45fa568c0364d4c313e3769c.json  query-be6db09a07defe335225b270c0acf8a77d43eeea7c31d931051fa6b3aafb54ba.json  query-c02af4df8f020d32f25b10daf10f4ddc96efe12288ce3ca5981d1ca0d79f3e2d.json  query-c211df27544275ea7eab7ba1502b82279611e02466e6341704b0387e4d2cabc9.json  query-c9c1a879cb39680ea63b60238180dbedde585804b559a5d82e7bbe6d1df5fc53.json  query-cb485926bfba981ea4929d8dcf151b6bcc814e8c041432ae53a4855c52f9e7d2.json  query-d19c6782b284b315d15b6a2bb5de872508bd94acbce08109fa6c273ae1100dc8.json  query-d21327139ed1f7ed3069e94cdbf87a99f20022220a1f5c229af643de7634c47d.json  query-dcb20ace111030e9e2c9ae007ab5e3902bc27e1fe16b7eb23ec0ff50e780bece.json  query-e52c971d0e3738db4b4be6fbeb5fdb674d8d38feeb950f7c89eae67d96bb1dd5.json  (+1 more)
assets/: custom.css
migrations/: 20260215092013_api_tokens.up.sql  (+16 more)
(+72 files in other folders)
