[package]
name = "cogere"
version = "0.2.3"
edition = "2024"
publish = false

[dependencies]
askama = "0.14.0"
axum =  { version = "0.8.8", features = ["macros", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "time"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower_governor = { version = "0.8", features = ["axum"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace", "limit", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v7"] }
sqlx = { version = "0.8.6", features = [ "sqlite", "runtime-tokio", "tls-rustls", "uuid", "chrono" ] }
axum-login = { git = "https://github.com/maxcountryman/axum-login.git", version = "0.18.0", default-features = false, features = ["require-builder"] }
tower-sessions = { version = "0.14.0", default-features = false, features = ["signed"] }
thiserror = "2.0.18"
password-auth = "1.0.0"
time = "0.3.47"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
axum-messages = "0.8.0"
trait-variant = "0.1.2"
bytes = "1.11.1"
base64 = "0.22.1"
serde_json = "1.0.149"
rust-embed = "8.11.0"
mime_guess = "2.0.5"
sha2 = "0.10.9"
url = "2.5.8"
chrono = { version = "0.4", features = ["serde"] }
zip = "8.2.0"
rand = "0.10.0"
governor = "0.10.4"

[build-dependencies]
ureq = { version = "3", features = [] }
